Divided the app in several files and implemented ng-submit

--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -12,14 +12,7 @@ using === means the types have to match
 <div ng-repeat="w in weatherResult.list">
     <div class=row>
         <div class="col-sm-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{{ convertToDate(w.dt) | date: 'MMM d,y' }}</h3> <!-- pipe something to filter -->
-                </div>
-                <div class="panel-body">
-                    Daytime temperature : {{ convertToCelsius(w.temp.day) }}
-                </div>
-            </div>
+            <weather-report weather-day="w" convert-to-standard="convertToCelsius(dayTimeTemp)" convert-to-date="convertToDate(dt)" date-format="MMM d, y"></weather-report>
         </div>
     </div>
 </div>
